# Gradebook

./: CMakeLists.txt  Gradebook.pptx  README.md
cpp/: exam.cpp  gradebook.cpp  main.cpp  menu.cpp  person.cpp  student.cpp  teacher.cpp
cpp/menu/: menu.cpp
include/: exam.h  gradebook.h  person.h  student.h  teacher.h
include/menu/: menu.h
